--- a/assets/styles/2uni-style.css
+++ b/assets/styles/2uni-style.css
@@ -269,7 +269,8 @@ footer {
 
     align-content: center;
 
-    z-index: 2;
+    
+    color: var(--power-color); 
     
 }
 
@@ -362,7 +363,7 @@ footer {
     background-color: var(--bg-color);
 
 
-    z-index: 1;
+    z-index: -1000;
 }
 
 /* --- Responsive Design --- */
