--- a/assets/styles/2uni-style.css
+++ b/assets/styles/2uni-style.css
@@ -252,7 +252,7 @@ footer {
 
 #typing-effect {
     font-family: var(--mtx-font);
-    color: var(--info-text);
+    color: var(--power-color;
     font-size: 1.5rem;
     line-height: 1.5rem;
     white-space: pre-wrap;
