--- a/assets/styles/2uni-style.css
+++ b/assets/styles/2uni-style.css
@@ -247,13 +247,13 @@ footer {
 
 .alternate-style {
     font-family: var(--std-font) !important; /* Forza l'applicazione del font */
-    color: var(--compiler2-color); /* White text color for style2 */
+    color: var(--compiler2-color) !important; /* White text color for style2 */
 }
 
 .alternate-style::after {
     content: "|";
     font-family: var(--std-font) !important;
-    color: var(--compiler2-color); /* White cursor */
+    color: var(--compiler2-color) !important; /* White cursor */
     animation: blink-fast 0.5s steps(1) infinite; /* Faster blinking cursor */
     line-height: 2rem;
 }
