--- a/assets/styles/2uni-style.css
+++ b/assets/styles/2uni-style.css
@@ -251,7 +251,7 @@ footer {
 }
 
 .alternate-style::after {
-    content: "|";
+    content: "|" !important; /* White cursor */
     font-family: var(--std-font) !important;
     color: var(--compiler2-color) !important; /* White cursor */
     animation: blink-fast 0.5s steps(1) infinite; /* Faster blinking cursor */
