--- a/assets/styles/2uni-style.css
+++ b/assets/styles/2uni-style.css
@@ -263,7 +263,7 @@ footer {
     background: linear-gradient(90deg, rgba(255, 255, 255, 1) 90%, rgba(255, 255, 255, 0.2));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    transition: background 0.2s ease-in-out; /* Smooth transition for fade */
+    transition: background 0.2s ease-in-out; /* Smooth transition for fade | */
 }
 
 .no-cursor::after {
