--- a/assets/styles/2uni-style.css
+++ b/assets/styles/2uni-style.css
@@ -254,7 +254,7 @@ footer {
 .alternate-style::after {
     content: "" !important; /* White cursor */
     font-family: var(--std-font) !important;
-    color: var(--compiler2-color) !important; /* White cursor */
+    color: var(--bg-color) !important; /* White cursor */
     animation: blink-fast 0.5s steps(1) infinite !important; /* Faster blinking cursor */
     line-height: 2rem !important;
 }
