--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -148,6 +148,7 @@ h1, h2, h3 {
 
 h1 {
     font-size: 2.5rem;
+    
 }
 
 h2 {
@@ -193,6 +194,11 @@ a:hover {
 .link-static {
     color: var(--static-color);
     font-weight: bold;
+}
+
+h1 a {
+    position: relative;
+    z-index: 10;
 }
 
 /* --- Footer --- */
