--- a/assets/styles/animations/compiler.css
+++ b/assets/styles/animations/compiler.css
@@ -100,11 +100,12 @@ overflow: hidden;
 }
 
 .alternate-style::after {
-    content: "" !important; /* White cursor */
+    content: "" !important; /* White cursor *
     font-family: var(--std-font) !important;
-    color: var(--compiler2-color) !important; /* White cursor */
+    color: var(--compiler2-color) !important; /* White cursor *
+    line-height: 2rem !important; */
     animation: blink-fast 20s steps(1) infinite !important; /* Faster blinking cursor */
-    line-height: 2rem !important;
+  
 }
 
 /* No Cursor Style */
